# rust-api

./: .gitignore  Cargo.toml  Dockerfile  Makefile  readme.md
.cargo/: config.toml
examples/: gen_key.rs  quick_dev.rs
sql/: various_request.sql
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/config/: error.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  ticket.rs  unit_test.rs  user.rs
src/model/store/: error.rs  mod.rs
src/pwd/: error.rs  hmac_hasher.rs  mod.rs
src/token/: error.rs  mod.rs
src/utils/: base64_utils.rs  error.rs  mod.rs  time_utils.rs
src/web/: error.rs  mod.rs  mw_auth.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
src/web/middlewares/: auth.rs  mod.rs  response_mapper.rs
src/web/rpc/: mod.rs  params.rs  task_rpc.rs
tests/: quick_dev.rs
web-folder/: index.html
