[package]
name = "webapi"
version = "0.1.0"
edition = "2021"
authors = ["Treize <jonathan.rougier@hotmail.fr"]
repository = "https://github.com/treizexiii/rust-api"

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.70"
serde_with = "3.8.1"

axum = {version = "0.7.5", features = ["macros"]}
tower-http = { version = "0.5.2", features = ["fs"]}
tower-cookies = "0.10.0"

tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}

lazy-regex = "3.1.0"
async-trait = "0.1.80"
strum_macros = "0.26.4"
uuid = {version = "1.8.0", features = ["v4", "fast-rng"]}
sqlx = { version = "0.7", features = [ "macros", "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
sqlb = "0.4"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.9"
serial_test = "3"
